--- a/RagMain.ipynb
+++ b/RagMain.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\sabar\\OneDrive\\Desktop\\CS_HDC_2\\environment\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\sabar\\OneDrive\\Desktop\\CellStrat-HDC\\Environment\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -68,11 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import OpenAIEmbeddings\n",
     "from langchain.vectorstores import Chroma \n",
     "from PyPDF2 import PdfReader\n",
     "from langchain.docstore.document import Document\n",
@@ -1193,7 +1192,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "environment",
+   "display_name": "Environment",
    "language": "python",
    "name": "python3"
   },
